--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @notNeb!
+  Fork me? Fork you, @notxNeban!
 </p>
 <p>
   Sean made a change
