--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<img src="https://i.natgeofe.com/n/8257db7b-ccbb-4b42-a319-9ff4e135fc48/01-macaque-selfie-naruto-indonesia.jpg" id="octocat" alt="" style="width:100px" />
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @notxNeban!
+  Fork me? Fork you, @xNeban!
 </p>
 <p>
   Sean made a change
