CSS - added style.css file
Signed-off-by: xNeban <gabrielkagayutan@hotmail.com>

Signed-off-by: xNeban <gabrielkagayutan@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <title>xNeban's Sample Website</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<img src="https://i.natgeofe.com/n/8257db7b-ccbb-4b42-a319-9ff4e135fc48/01-macaque-selfie-naruto-indonesia.jpg" id="octocat" alt="" style="width:250px" />
+<img src="https://i.natgeofe.com/n/8257db7b-ccbb-4b42-a319-9ff4e135fc48/01-macaque-selfie-naruto-indonesia.jpg" id="octocat" alt=""/>
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @xNeban!
+  @xNeban!
 </p>
 <p>
-  Sean made a change
+  neb made a change
 </p>
 
 </body>
