Added another page

--- a/html/newPage.html
+++ b/html/newPage.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>xNeban's Sample Website</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -12,13 +12,13 @@
 <img src="https://i.natgeofe.com/n/8257db7b-ccbb-4b42-a319-9ff4e135fc48/01-macaque-selfie-naruto-indonesia.jpg" id="octocat" alt=""/>
 
 <!-- Feel free to change this text here -->
-<p>
+<p style="color: red;">
   @xNeban!
 </p>
-<p>
+<p style="color: red;">
   neb made a change
 </p>
-<a href="html/newPage.html">Go to next page</a>
+<a href="..">Go back to home page</a>
 
 </body>
 </html>
